--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -51,3 +51,15 @@ input {
 .botoes {
     margin-left: 30px;
 }
+
+#avisoEmail, #avisoSenha{
+    display: none;
+}
+
+#email:focus~#avisoEmail, #senha:focus~#avisoSenha {
+    display: inline-block;
+    font-style: italic;
+    font-size: 12px;
+    margin: 5px;
+    margin-right: 160px;
+}
