--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -7,14 +7,17 @@
 h1 {
     margin-bottom: 30px;
     margin-top: 30px;
-    margin-left: 30px; 
+    margin-left: 5%; 
     font-size: 24px;
     color: #191970;
 }
 
 #painelPrincipal {
+    background-image: url(images/logoLogin2.png);
+    background-repeat: no-repeat;
+    background-position: right;
     border-radius: 5px;
-    width: 420px;
+    width: 700px;
     border: none;
     /*height: 260px;*/
     padding: 5px;
@@ -29,7 +32,7 @@ h1 {
     border: none;
     padding: 20px;
     background-color: #A9A9A9;
-    margin: 5% auto;
+    margin: 5% 5%;
 }
 
 #loginIncorreto {
