--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -1,120 +1,145 @@
 * {
-	padding: 0;
-	margin: 0;
 	font-family: Lucida, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
-    margin-bottom: 30px;
-    margin-top: 30px;
-    margin-left: 5%; 
-    font-size: 24px;
-    color: #191970;
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 60px;
+    font-style: italic;
+    font-weight: normal;
+    margin-left: 55px;
+    opacity: 0.4;
+}
+
+h2 {
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: normal;
+    opacity: 0.4;
+    margin-left: 7px;
+}
+
+body {
+    background-image: url(images/fundoLogin2.jpg);
+    background-repeat: no-repeat;
 }
 
 #painelPrincipal {
-    background-image: url(images/logoLogin2.png);
-    background-repeat: no-repeat;
-    background-position: right;
-    border-radius: 5px;
-    width: 700px;
-    border: none;
-    /*height: 260px;*/
-    padding: 5px;
-    background-color: #DCDCDC;
     margin: 100px auto;
-    
+    width: 700px;
 }
 
 #painelLogin {
     border-radius: 5px;
-    width: 300px;
-    border: none;
-    padding: 20px;
-    background-color: #A9A9A9;
-    margin: 5% 5%;
+    float: left;
+    margin-top: 15px;
+    padding: 50px;
+    width: 200px;
+}
+
+#logoLogin {
+    float: right;
+    background-image: url(images/logoLogin2.png);
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 320px;
+    opacity: 0.6;
+    width: 320px;
+}
+
+#painelAvisos{
+    margin-left: -25px;
 }
 
 #loginIncorreto {
-    display: inline-block;
-    width: 360px;
+    background-color: #800000;
+    border-color: #800000;
     border-radius: 5px;
-    background-color: #B22222;
-    margin-left: 7%;
-    margin-bottom: 7%;
+    display: block;
+    margin-top: 10%;
+    opacity: 0.4;
+    padding: 0px;
     text-align: center;
+    width: 300px;
 }
 
 #avisoSenha {
-    display: inline-block;
-    margin: 5px;
-    font-style: italic;
-    font-size: 12px;
     color: #FFFFFF;
-    /*font-weight: bold;*/
+    display: inline-block;
+    font-size: 12px;
+    font-style: italic;
+    opacity: 0.8;
+    padding: 10px;
 }
 
 label, input {
+    border-radius: 5px;
     display: block;
     margin: 5px;
-    border-radius: 5px;
 }
 
 input {
-    border: 1px solid #848484;
-    width: 300px;
-    padding: 4px;
-    color: #191970;
+    border: 1px solid #FFFFFF;
+    color: #000000;
     font-style: italic;
+    margin-top: 20px;
+    opacity: 0.5;
+    padding: 10px;
+    width: 220px;
 }
 
-label {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #191970;
-    font-weight: bold;
+::-webkit-input-placeholder { /* WebKit browsers */
+    color: #000000; 
+    opacity:1; filter: alpha(opacity = 100);
+}
+
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color: #000000; 
+    opacity:1; filter: alpha(opacity = 100);
+}
+
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color: #000000; 
+    opacity: 1; 
+    filter: alpha(opacity = 100);
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color: #000000; 
+    opacity: 1; 
+    filter: alpha(opacity = 100);
 }
 
 .botoes {
     margin-top: 30px;
 }
 
+#botaoAcessar {
+    font-size: 18px;
+    padding: 7px;
+}
+
 .botao {
-    display: inline-block;
-    font-size: 12px;
-    padding: 5px;
-    color: #FFFFFF;
-    background-color: #191970;
-    border: 1px solid #191970;
+    background-color: #696969;
+    border: 1px solid #696969;
     border-radius: 4px;
-    text-decoration: none;
-    text-align: center;
+    color: #FFFFFF;
+    font-size: 12px;
     margin-right: 5px;
     margin-left: 6px;
+    opacity: 0.5;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .botao:hover {
+    border: 1px solid #000000;
+    background-color: #000000;
     color: #FFFFFF;
-    focus: #00008B ;
-    background-color: #00008B;
-    border: 1px solid #00008B;
     cursor: pointer;
 }
-
-
-/*#avisoEmail, #avisoSenha{
-    display: none;
-    font-style: italic;
-    font-size: 12px;
-    margin: 5px;
-    margin-right: 200px;
-}
-
-#email:focus~#avisoEmail, #senha:focus~#avisoSenha {
-    color: black;
-    display: inline-block;
-    font-style: italic;
-    font-size: 12px;
-    margin: 5px;
-    margin-right: 160px;
-}*/
