--- a/css/stylePrincipal.css
+++ b/css/stylePrincipal.css
@@ -1,27 +1,85 @@
-ul a{
-  height: 35px;
-  list-style:none;
-  padding:0 ;
-  width:300px;
-  background-color:#CCC;
-  color:white;
-  border: 1px solid rgba(0,0,0,0.3);
+* {
+  font-family: Lucida, sans-serif;
+    margin: 0;
+    padding: 0;
+    border-spacing: 0;
 }
 
-a,li{
-  float:left;
-  line-height:35px;
-  font-size:30px;
-  width:80px;
-  text-align:center;
-  border-left:1px solid rgba(255,255,255,0.3);
-  border-right: 1px solid rgba(0,0,0,0.3);
+body {
+    background-image: url(images/fundoLogin2.jpg);
+    background-repeat: no-repeat;
 }
 
-a,li:first-child{
-  border-left:none;
+h1 {
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 50px;
+    font-style: italic;
+    font-weight: normal;
+    opacity: 0.4;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
-a,li:last-child{
-  border-right:none;
+#menuPrincipal {
+  background-color: #696969;
+  opacity: 0.4;
+  margin: 70px auto;
+  padding: 14px;
+}
+
+.menu {
+  padding: 14px;
+  color: #FFFFFF;
+  text-align: center;
+  text-decoration: none;
+}
+
+.menu:hover {
+    background-color: #000000;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+#painelUsuario {
+  float: right;
+  color: #FFFFFF;
+  padding: 10px;
+  background-color: #000000;
+  border-radius: 4px;
+  opacity: 0.5;
+  width: 400px;
+  margin-right: 20px;
+}
+
+#areaUsuario {
+  margin-top: 5px;
+  float: right;
+  margin-right: 20px;
+  opacity: 0.5;
+}
+
+#areaUsuarioBotoes {
+  float: right;
+}
+
+.botao {
+    background-color: #696969;
+    border: 1px solid #696969;
+    border-radius: 4px;
+    color: #FFFFFF;
+    font-size: 12px;
+    margin-right: 5px;
+    margin-left: 6px;
+    opacity: 0.5;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.botao:hover {
+    border: 1px solid #696969;
+    background-color: #696969;
+    color: #FFFFFF;
+    cursor: pointer;
 }
