--- a/css/stylePrincipal.css
+++ b/css/stylePrincipal.css
@@ -21,10 +21,21 @@ h1 {
     margin-top: 10px;
 }
 
+h2 {
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: normal;
+    opacity: 0.4;
+    margin-left: 30px;
+    margin-top: 10px;
+}
+
 #menuPrincipal {
   background-color: #696969;
   opacity: 0.4;
-  margin: 70px auto;
+  margin: 32px auto;
   padding: 14px;
 }
 
@@ -50,6 +61,7 @@ h1 {
   opacity: 0.5;
   width: 400px;
   margin-right: 20px;
+  margin-top: -30px;
 }
 
 #areaUsuario {
