--- a/css/styleBibliotecas.css
+++ b/css/styleBibliotecas.css
@@ -1,5 +1,14 @@
+* {
+  font-family: Lucida, sans-serif;
+    margin: 0;
+    padding: 0;
+    border-spacing: 0;
+    font-weight: normal;
+}
+
+
 table {
-	border: 1px solid #cbcbcb;
+	/*border: 1px solid #000000;*/
 	border-spacing: 0;
 	border-radius: 4px;
 	width: 1000px;
@@ -14,24 +23,32 @@ table:last-child {
 }
 
 td {
-	border-left: 1px solid #cbcbcb;
-	border-bottom: 1px solid #cbcbcb;
+	/*border-left: 1px solid #696969;*/
+	/*border-bottom: 1px solid #000000;*/
 	width: 200px;
 	padding: 5px;
 }
 
 td:first-child {
 	border-left-width: 0;
+
 }
 
-tr:nth-child(2n-1) {
-	background-color: #f2f2f2;
+tr {
+  /*background-color: #000000;*/
+  /*color: #FFFFFF;*/
+}
+
+tr:nth-child(2n-0) {
+	background-color: #E8E8E8;
 }
 
 .titulo {
-	padding: 5px;
-	border-left: 1px solid #cbcbcb;
-	border-bottom: 1px solid #cbcbcb;
+	padding: 8px;
+	/*border-left: 1px solid #696969;*/
+  background-color: #BEBEBE;
+	/*border-bottom: 1px solid #000000;*/
+  font-weight: bold;
 }
 
 .titulo:first-child {
@@ -41,16 +58,13 @@ tr:nth-child(2n-1) {
 .cabecalho {
 	padding: 10px;
 	text-align: center;
-	background-color: #e0e0e0;
-	border-bottom: 1px solid #cbcbcb;
-	font-size: 18px;
+  /*background-color: #000000;*/
+  border-top: 1px solid #BEBEBE;
+	font-size: 20px;
 }
 
-* {
-  font-family: Lucida, sans-serif;
-    margin: 0;
-    padding: 0;
-    border-spacing: 0;
+.cabecalho:bottom-child{
+  border-radius: 0px;
 }
 
 body {
@@ -78,25 +92,37 @@ h2 {
     opacity: 0.4;
     margin-left: 30px;
     margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+
+#painelPrincipal {
+  background-color: #FFFFFF;
+  margin: 20px auto;
+  width: 1000px;
+  padding: 30px;
+  border-radius: 4px;
+  opacity: 0.6;
 }
 
 #menuPrincipal {
-  background-color: #696969;
-  opacity: 0.4;
-  margin: 30px auto;
+  background-color: #FFFFFF;
+  opacity: 0.6;
+  /*margin: 30px auto;*/
   padding: 14px;
 }
 
 .menu {
   padding: 14px;
-  color: #FFFFFF;
   text-align: center;
   text-decoration: none;
+  color: #000000;
+  font-weight: bolder;
+  opacity: 0.8;
 }
 
 .menu:hover {
-    background-color: #000000;
-    color: #FFFFFF;
+    background-color: #BEBEBE;
     cursor: pointer;
 }
 
@@ -130,4 +156,42 @@ h2 {
     background-color: #696969;
     color: #FFFFFF;
     cursor: pointer;
+}
+
+#botaoEditar {
+  background-color: #006400;
+  border: 1px solid #006400;
+  border-radius: 4px;
+  padding: 5px;
+  margin-right: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+#botaoEditar:hover {
+  background-color: #008B00;
+  border: 1px solid #008B00;
+  border-radius: 4px;
+  padding: 5px;
+  margin-right: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+#botaoExcluir {
+  background-color: #8B0000;
+  border: 1px solid #8B0000;
+  border-radius: 4px;
+  padding: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+#botaoExcluir:hover {
+  background-color: #C60000;
+  border: 1px solid #C60000;
+  border-radius: 4px;
+  padding: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
 }
