--- a/css/styleBibliotecas.css
+++ b/css/styleBibliotecas.css
@@ -1,9 +1,10 @@
 * {
   font-family: Lucida, sans-serif;
-    margin: 0;
-    padding: 0;
-    border-spacing: 0;
-    font-weight: normal;
+  margin: 0;
+  padding: 0;
+  border-spacing: 0;
+  font-weight: normal;
+  font-size: 12px;
 }
 
 
@@ -49,6 +50,7 @@ tr:nth-child(2n-0) {
   background-color: #BEBEBE;
 	/*border-bottom: 1px solid #000000;*/
   font-weight: bold;
+  font-size: 14px;
 }
 
 .titulo:first-child {
@@ -69,7 +71,7 @@ tr:nth-child(2n-0) {
 
 body {
     background-image: url(images/fundoLogin2.jpg);
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
 }
 
 h1 {
@@ -144,7 +146,6 @@ h2 {
     color: #FFFFFF;
     font-size: 12px;
     margin-right: 5px;
-    margin-left: 6px;
     opacity: 0.5;
     padding: 5px;
     text-align: center;
@@ -156,6 +157,21 @@ h2 {
     background-color: #696969;
     color: #FFFFFF;
     cursor: pointer;
+}
+
+#painelFormulario {
+  width: 400px;
+}
+
+#painelFormulario input[type = "text"], select{
+  display: block;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+#botaoSalvar {
+  display: block;
+  margin-top: 10px;
 }
 
 #botaoEditar {
@@ -194,4 +210,19 @@ h2 {
   padding: 5px;
   color: #FFFFFF;
   cursor: pointer;
+}
+
+#avisoCamposIncorretos {
+    background-color: #800000;
+    border-color: #800000;
+    border-radius: 5px;
+    color: #FFFFFF;
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    width: 300px;
+    font-size: 12px;
+    font-style: italic;
+    opacity: 0.8;
+    padding: 10px;
 }
