--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -30,18 +30,18 @@ h2 {
 #painelPrincipal {
     background-color: white;
     border: 1px solid #bdbdbd;
-    height: 495px;
+    height: 380px;
     margin: 30px auto;
     padding: 30px;
     width: 670px;
 }
 
 
-#painelCadastro {
+#painelLogin {
     background-color: #F5F5F5;
     border: 1px solid #bdbdbd;
     float: left;
-    height: 380px;
+    height: 265px;
     padding: 15px;
     width: 260px;
 }
@@ -51,7 +51,6 @@ h2 {
     background-repeat: no-repeat;
     float: right;
     height: 320px;
-    margin-top: 50px;
     width: 320px;
 }
 
@@ -114,7 +113,7 @@ input {
     margin-top: 30px;
 }
 
-#botaoCadastrar {
+#botaoAcessar {
     background-color: #00008B;
     border: 1px solid #00008B;
     border-radius: 2px;
@@ -128,18 +127,18 @@ input {
     text-decoration: none;
 }
 
-#botaoCadastrar:hover {
+#botaoAcessar:hover {
     border: 1px solid #0000CD;
     background-color: #0000CD;
     color: #FFFFFF;
     cursor: pointer;
 }
 
-#linkVoltar {
+#linkCadastrar {
     color: #696969;
 }
 
-#linkVoltar:link {
+#linkCadastrar:link {
     color: #696969;
     float: right;
     font-size: 14px;
@@ -148,10 +147,10 @@ input {
     text-decoration: none;
 }
 
-#linkVoltar:visited {
+#linkCadastrar:visited {
     text-decoration: none;
 }
 
-#linkVoltar:hover {
+#linkCadastrar:hover {
     text-decoration: underline;
 }
