--- a/css/styleContaUsuario.css
+++ b/css/styleContaUsuario.css
@@ -1,7 +1,251 @@
-label {
-	display: block;
+* {
+    font-family: Calibri Light;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #F5F5F5;
+}
+
+h1 {
+    color: #696969;
+    border-bottom: 1px solid #bdbdbd;
+    border-bottom-color: rgb(189, 189, 189);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    font-size: 36px;
+    font-weight: normal;
+    margin-bottom: 35px;
+}
+
+h2 {
+    color: #696969;
+    font-size: 20px;
+    font-weight: normal;
+    margin-left: 7px;
+    margin-bottom: 30px;
+}
+
+
+#painelPrincipal {
+    background-color: white;
+    border: 1px solid #bdbdbd;
+    height: 550px;
+    margin: 10px auto;
+    padding: 30px;
+    width: 670px;
+}
+
+
+#painelCadastro {
+    background-color: #F5F5F5;
+    border: 1px solid #bdbdbd;
+    float: left;
+    height: 445px;
+    padding: 15px;
+    width: 260px;
+}
+
+#painelLogo {
+    background-image: url(images/logoLogin.png);
+    background-repeat: no-repeat;
+    float: right;
+    height: 320px;
+    margin-top: 50px;
+    width: 320px;
+}
+
+#painelAvisos{
+    height: 20px;
+    padding: 10px;
+}
+
+#loginIncorreto {
+    background-color: #800000;
+    display: block;
+    margin-left: -5px;
+    text-align: center;
+    width: 241px;
+}
+
+#avisoSenha {
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 14px;
+    padding: 3px;
+}
+
+
+/***************************************************************************
+CSS para cofirmação com modal
+****************************************************************************/
+
+
+.modalConfirmacao {
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  background: rgba(0,0,0,0.8);
+  bottom: 0;
+  font-family: Calibri Light;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transition: opacity 400ms ease-in;
+  z-index: 99999;
+}
+
+.modalConfirmacao:target {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modalConfirmacao > div {
+    background-color: #F5F5F5;
+    border: 1px solid #bdbdbd;
+    height: 90px;
+    margin: 10% auto;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    width: 400px;
+}
+
+#painelBotoesConfirmacao {
+    padding: 10px;
+    margin-left: 130px;
+}
+
+.botaoConfirmacao {
+    background-color: #00008B;
+    border: 1px solid #00008B;
+    border-radius: 2px;
+    color: #FFFFFF;
+    float: left;
+    font-size: 14px;
+    margin-left: 6px;
+    margin-right: 5px;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    width: 50px;
+}
+
+.botaoConfirmacao:hover {
+    border: 1px solid #0000CD;
+    background-color: #0000CD;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+/***************************************************************************
+Fim do CSS para cofirmação com modal 
+****************************************************************************/
+
+label, input {
+    display: block;
+    margin: 5px;
 }
 
 input {
-	display: block;
+    border: 1px solid #D3D3D3;
+    color: #000000;
+    font-size: 14px;
+    margin-top: 20px;
+    padding: 10px;
+    width: 220px;
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+    color: #696969; 
+    opacity:1; filter: alpha(opacity = 100);
+}
+
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color: #696969; 
+    opacity:1; filter: alpha(opacity = 100);
+}
+
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color: #696969; 
+    opacity: 1; 
+    filter: alpha(opacity = 100);
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color: #696969; 
+    opacity: 1; 
+    filter: alpha(opacity = 100);
+}
+
+#painelBotoes1 {
+    margin-top: 30px;
+}
+
+#painelBotoes2 {
+    margin-top: 20px;
+}
+
+#botaoSalvarAlteracoes {
+    background-color: #00008B;
+    border: 1px solid #00008B;
+    border-radius: 2px;
+    color: #FFFFFF;
+    float: left;
+    font-size: 14px;
+    margin-left: 6px;
+    margin-right: 5px;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#botaoSalvarAlteracoes:hover {
+    border: 1px solid #0000CD;
+    background-color: #0000CD;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+#botaoExcluirConta {
+    background-color: #8B0000;
+    border: 1px solid #8B0000;
+    border-radius: 2px;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 14px;
+    margin-left: 6px;
+    margin-right: 5px;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#botaoExcluirConta:hover {
+    border: 1px solid #C60000;
+    background-color: #C60000;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+#linkVoltar {
+    display: block;
+    color: #696969;
+    margin-left: 10px;
+}
+
+#linkVoltar:link {
+    color: #696969;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+#linkVoltar:visited {
+    text-decoration: none;
+}
+
+#linkVoltar:hover {
+    text-decoration: underline;
 }
